--- a/cen2010_f23C_final_t1-main/portfolio.html
+++ b/cen2010_f23C_final_t1-main/portfolio.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="center">
                <h2>Features</h2>
-               <p class="lead">This is a showcase of all the functions and features in the Fit Food app<br>New Features soon to be implemented will be updated on this page</p>
+               <p class="lead">This is a showcase of all the functions and features in the Fit Food app<br>New Features that will be implemented in the future will be updated on this page</p>
             </div>
         
 
